Closed
Bug 1737703
Opened 3 years ago
Closed 3 years ago
Add a Diagnostic assertion that hunspell is only ever created or destroyed on the main thread
Categories
(Core :: Security: Process Sandboxing, defect)
Core
Security: Process Sandboxing
Tracking
()
RESOLVED
FIXED
95 Branch
Tracking | Status | |
---|---|---|
firefox95 | --- | fixed |
People
(Reporter: bholley, Assigned: bholley)
References
Details
Attachments
(1 file)
Shravan had a theory that the crashes in bug 1736171 might be related to a race. This code seems pretty clearly main-thread-only but easy enough to add a diagnostic assertion to rule that possibility out.
Assignee | ||
Comment 1•3 years ago
|
||
Pushed by bholley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2adccfa71345
Verify that RLBoxed Hunspell is only ever used on the main thread. r=shravanrn
Comment 3•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox95:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•