Bug 1737703 - Verify that RLBoxed Hunspell is only ever used on the main thread. r=shravanrn

Differential Revision: https://phabricator.services.mozilla.com/D129451